--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "passport-jwt": "^4.0.1",
     "pdfmake": "^0.3.3",
     "reflect-metadata": "^0.2.2",
+    "roboto-font": "^0.1.0",
     "rxjs": "^7.8.1",
     "uuid": "^13.0.0"
   },
